css/main.css
@import url("iran-sans.css");
@import url("../fonts/OpenSans.css");

html {
    color: #222;
    font-size: 1em;
    line-height: 1.4;
    font-family: 'IRANSans', 'Open Sans';
    direction: rtl;
}

::-moz-selection {
    background: #b3d4fc;
    text-shadow: none;
}

::selection {
    background: #b3d4fc;
    text-shadow: none;
}

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

audio,
canvas,
iframe,
img,
svg,
video {
    vertical-align: middle;
}

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

textarea {
    resize: vertical;
}

.browserupgrade {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}


/* ==========================================================================
   Author's custom styles
   ========================================================================== */

body {
  width: 100%;
  direction: rtl;
}

.border-top {
  position: fixed;
  width: 100vw;
  height: 1em;
  background: #f1f1f1;
  top: 0;
  left: 0;
}

.border-bottom {
  position: fixed;
  width: 100vw;
  height: 1em;
  background: #f1f1f1;
  bottom: 0;
  left: 0;
}

.border-left {
  position: fixed;
  width: 1em;
  height: 100vh;
  background: #f1f1f1;
  top: 0;
  left: 0;
}

.border-right {
  position: fixed;
  width: 1em;
  height: 100vh;
  background: #f1f1f1;
  top: 0;
  right: 0;
}

.page {
  margin: 1em;
  padding: 2em;
}

#menu {
  text-align: center;
}

#menu .logo {
  width: 17%;
  height: auto;
  display: inline-block;
}

#menu .logo img {
  width: 100%;
  height: auto;
}

#menu .menu-link {
  padding: 1em 2em;
}

#menu .menu-link a {
  text-decoration: none;
  color: #222;
  font-size: 2em;
  font-weight: 200;
  transition: .5s ease-in all;
}

#menu .menu-link a:hover {
  color: #c44;
}

.page-section {
  width: 1248px;
  margin: 0 auto;
}

#main-page-slide-container {
  height: 340px;
  display: block;
  margin-top: 2em;
}

#main-page-slides,
#main-page-slide-container .item {
  width: 100%;
  height: 100%;
}

#main-page-slides .owl-stage-outer,
#main-page-slides .owl-stage,
#main-page-slides .owl-item {
  height: 100%;
}

#main-page-slides .item {
  padding: 2em;
  box-sizing: border-box;
  position: relative;
}

#main-page-slides .item .product-image {
  position: absolute;
  left: 0;
  bottom: 0;
  height: 100%;
  width: auto;
}

#main-page-slides .item .description {
  position: absolute;
  right: 0;
  top: 0;
  padding: 2em;
  width: 710px;
  font-weight: 300;
  line-height: 1.65em;
  text-align: justify;
}

#main-page-slides .item .buttons {
  position: absolute;
  right: 0;
  bottom: 0;
  padding: 3em 1.5em;
}

#main-page-slides .item .buttons a {
  text-decoration: none;
  color: #fff;
  padding: .5em 2em;
  background: #000;
  border-radius: 3px;
  margin-right: 1em;
  box-sizing: border-box;
}

#main-page-slides .item .buttons a:hover {
  opacity: .9;
}

.search-bar .search-field input {
  width: 100%;
  box-sizing: border-box;
  padding: .7em 1em;
  font-weight: 200;
  border: 2px solid #aaa;
  padding-right: 2em;
}

.search-bar .search-field {
  position: relative;
}

.search-bar .search-field i {
  position: absolute;
  left: .6em;
  top: .6em;
  font-size: 1.5em;
  color: #888;
}

.product-search {
  margin-top: 2em;
}

.search-filters {
  margin-top: 1em;
}

.expandable {
  display: none;
}

.search-filters .filter-expander {
  color: #222;
  text-decoration: none;
  transition: .3s ease-in all;
}

.search-filters .filter-expander .name::after {
  content: ":";
}

.search-filters .filter-expander .chevron {
  margin-left: 12px;
  margin-right: 16px;
}

.search-filters .filter-expander .selections {
  font-weight: 300;
}

.search-filters .filter-expander:hover {
  color: #c44;
}

#featured-products-slides {
  margin-top: 2em;
}

#featured-products-slides .item .product-image-container {
  height: 165px;
  width: 165px;
  position: relative;
  margin: 0 auto;
}

#featured-products-slides .item .product-image-container img {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translateX(-50%) translateY(-50%);
  max-width: 100%;
  max-height: 100%;
}

#featured-products-slides .item {
  padding: 1em;
  border: 1px solid #fff;
  border-radius: 5px;
  width: 180px;
  height: 280px;
  display: flex;
  flex-direction: column;
  position: relative;
}

#featured-products-slides .item .title {
  font-size: 1em;
  font-weight: 200;
  text-align: center;
  flex-grow: 2;
}

#featured-products-slides .item .info {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  padding: 1em;
  background: #E5FCC2;
  display: flex;
  flex-direction: column;
  opacity: 0;
  transition: .5s ease-out all;
}

#featured-products-slides .item:hover .info {
  opacity: 1;
}

#featured-products-slides .item .info .description {
  overflow: hidden;
  flex-grow: 3;
  margin-bottom: .0em;
  font-weight: 200;
}

#featured-products-slides .item .info .buttons {
  text-align: center;
}

#featured-products-slides .item .info .buttons a {
  background: rgb(26, 3, 61);
  color: #E5FCC2;
  padding: .4em 1em;
  box-sizing: border-box;
  width: 95%;
  margin-bottom: 8px;
  display: inline-block;
  text-decoration: none;
  border-radius: 3px;
}

#featured-products-slides .item .info .buttons a:hover {
  background: rgb(46, 23, 81);
}

#featured-products-slides .item .price-tags {
  text-align: center;
}

#featured-products-slides .item .price-tags .price-original {
  color: #c44;
  text-decoration: line-through;
  margin-left: 4px;
}

#featured-products-slides .item .price-tags .price::after {
  content: "ریال";
}

/* ==========================================================================
   Media Queries
   ========================================================================== */

@media only screen and (min-width: 35em) {

}

@media print,
       (-o-min-device-pixel-ratio: 5/4),
       (-webkit-min-device-pixel-ratio: 1.25),
       (min-resolution: 120dpi) {

}

/* ==========================================================================
   Helper classes
   ========================================================================== */

.hidden {
    display: none !important;
    visibility: hidden;
}

.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
}

.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
    clip: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    position: static;
    width: auto;
}

.invisible {
    visibility: hidden;
}

.clearfix:before,
.clearfix:after {
    content: " ";
    display: table;
}

.clearfix:after {
    clear: both;
}

.clearfix {
    *zoom: 1;
}

/* ==========================================================================
   Print styles
   ========================================================================== */

@media print {
    *,
    *:before,
    *:after {
        background: transparent !important;
        color: #000 !important;
        box-shadow: none !important;
        text-shadow: none !important;
    }

    a,
    a:visited {
        text-decoration: underline;
    }

    a[href]:after {
        content: " (" attr(href) ")";
    }

    abbr[title]:after {
        content: " (" attr(title) ")";
    }

    a[href^="#"]:after,
    a[href^="javascript:"]:after {
        content: "";
    }

    pre,
    blockquote {
        border: 1px solid #999;
        page-break-inside: avoid;
    }

    thead {
        display: table-header-group;
    }

    tr,
    img {
        page-break-inside: avoid;
    }

    img {
        max-width: 100% !important;
    }

    p,
    h2,
    h3 {
        orphans: 3;
        widows: 3;
    }

    h2,
    h3 {
        page-break-after: avoid;
    }
}

